[INLONG-1819]Optimize GC parameter configuration in TubeMQ's env.sh file (#1820)